refactor : 제미나이 리뷰반영